k8s/hello-kube-service.yaml
apiVersion: apps/v1beta1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: hello-kube-service-deployment
  namespace: hello-kube
spec:
  selector:
    matchLabels:
      app: hello-kube-service
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1      
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod-nginx.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        app: hello-kube-service
    spec:
      containers:
        - name: hello-kube-service-console
          image: snpcontainers2.azurecr.io/hello-kube-service:latest
          imagePullSecrets:
          - name: acs-secret          
          volumeMounts:
          - name: config-volume
            mountPath: /config
      volumes:
        - name: config-volume
          configMap:
            # Provide the name of the ConfigMap containing the files you want
            # to add to the container
            name: hello-kube-config
