k8s/hello-kube-sql-server.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: hk-sql-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hksql
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mssql
        image: microsoft/mssql-server-linux
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssqldb
          mountPath: /var/opt/mssql
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: mssql-data
---
apiVersion: v1
kind: Service
metadata:
  name: hk-sql-server
spec:
  selector:
    app: hksql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: LoadBalancer
