k8s/rabbitmq.yaml
apiVersion: apps/v1beta1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: hello-kube-rabbitmq-deployment
spec:
  selector:
    matchLabels:
      app: hello-kube-rabbitmq
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod-nginx.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        app: hello-kube-rabbitmq
    spec:
      containers:
      - name: hello-kube-rabbitmq
        image: bitnami/rabbitmq:latest
        ports:
        - name: epmd
          containerPort: 4369
          protocol: TCP
        - name: amqp
          containerPort: 5672
          protocol: TCP
        - name: dist
          containerPort: 25672
          protocol: TCP
        - name: stats
          containerPort: 15672
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kube-rabbitmq-lb
spec:
  ports:
  - name: epmd
    protocol: TCP
    port: 4369
    targetPort: epmd
  - name: amqp
    protocol: TCP
    port: 5672
    targetPort: amqp
  - name: dist
    protocol: TCP
    port: 25672
    targetPort: dist
  - name: stats
    protocol: TCP
    port: 15672
    targetPort: stats
  selector:
    app: hello-kube-rabbitmq
  type: ClusterIP
  sessionAffinity: None
