k8s/hello-kube-web.yaml
apiVersion: apps/v1beta1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: hello-kube-web-deployment
  namespace: hello-kube
spec:
  selector:
    matchLabels:
      app: hello-kube-web
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1      
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod-nginx.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        app: hello-kube-web
    spec:
      containers:
        - name: hello-kube-web
          image: snpcontainers2.azurecr.io/hello-kube-web:latest
          imagePullPolicy: Always          
          ports:
          - name: app
            containerPort: 5000
            protocol: TCP
          volumeMounts:
          - name: config-volume
            mountPath: /config
      imagePullSecrets:
      - name: acr-auth          
            
      volumes:
        - name: config-volume
          configMap:
            # Provide the name of the ConfigMap containing the files you want
            # to add to the container
            name: hello-kube-config
---
apiVersion: v1
kind: Service
metadata:
  name: hello-kube-web-lb
  namespace: hello-kube
spec:
  ports:
  - name: app
    protocol: TCP
    port: 5000
    targetPort: app
  selector:
    app: hello-kube-web
  type: ClusterIP
  sessionAffinity: None

---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: hello-kube-web-ingress-k8s
  namespace: hello-kube
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
spec:
  tls:
  - hosts:
    - hello-kube.k8s.snp.fhlbc.in
    secretName: hello-kube-web-k8s-tls-cert2
  rules:
  - host: hello-kube.k8s.snp.fhlbc.in
    http:
      paths:
      - path: "/"
        backend:
          serviceName: hello-kube-web-lb
          servicePort: 5000
